# blablado

./: .gitignore  LICENSE  README.md  setup.cfg
demo/: API_demo-claude.ipynb  API_demo.ipynb  audio_demo.ipynb  demo.py  imswitch_Demo.ipynb  microscope_stage_demo.ipynb
src/blablado/: __init__.py  _assistant.py  _machinery.py  _speak.py  _speech_recognition.py  _tools.py
