[metadata]
name = blablado
version = attr: blablado.__version__
description = Use LLMs to call functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/blablado
author = Robert Haase
author_email = robert.haase@uni-leipzig.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/blablado/issues
    Documentation = https://github.com/haesleinhuepf/blablado#README.md
    Source Code = https://github.com/haesleinhuepf/blablado
    User Support = https://github.com/haesleinhuepf/blablado/issues

[options]
packages = find:
install_requires =
    numpy
    openai>=1.5.0
    langchain>=0.0.348
    SpeechRecognition
    pydub

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
